src/objects/TrackTime__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SubTask__c</fullName>
        <label>SubTask</label>
        <referenceTo>SubTask__c</referenceTo>
        <relationshipLabel>TrackTime</relationshipLabel>
        <relationshipName>TrackTime</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TrackTime</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TT-{00000}</displayFormat>
        <label>TrackTime Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TrackTime</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>